equation editor: better syntax error reporting